--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -160,15 +160,18 @@
             aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
-        <button (click)="selectedIndex = i;editSingleTableCells = false; verifyCritera()" class="add-column"
-            matTooltip="Setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
+        <button (click)="openWindow(i, false)"class="add-column"
+            matTooltip="Setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex " mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
         <button  (click)="toggleImageUploadBox()" class="add-column" matTooltip="uploadImages"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
-
+        <button (click)="showModalTable = true" class="add-column" matTooltip="Update names" matTooltipPosition="above"
+        *ngIf="i !== selectedIndex" mat-icon-button>
+        <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
+    </button>
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
@@ -192,16 +195,16 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
     <!-- Cards Test Name-->
     <mat-card class="example-card">
         <mat-card-header>
-            <mat-card-title>Test Names</mat-card-title>
+            <mat-card-title>Columns</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <div style="text-align: center;">
-                <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
+                <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste Columns</div>
                 <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
             </div>
             <div style="display: flex; justify-content: center; align-items: center;">
                 <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
-                    <mat-label>Copy & Paste TEST QUESTIONS</mat-label>
+                    <mat-label>Copy & Paste Columns</mat-label>
                     <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
                         (ngModelChange)="upLoadNamesAndRationales(testNamesInput)" placeholder="Paste test names here"
                         cdkTextareaAutosize cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"></textarea>
@@ -813,3 +816,4 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 </div>
 
 <!--📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱 END TABLE GENERATOR 📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱-->
+<app-table *ngIf="showModalTable" (save)="showModalTable = $event" [displayedColumns]="columnsNames" [dataSource]="dataSource" ></app-table>
