--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@use '~@angular/material' as mat;
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~animate.css/animate.min';
@@ -16,12 +17,12 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-$custom-typography: mat-typography-config(
+$custom-typography: mat.define-typography-config(
     $font-family: 'sofia-pro'
 );
 
 
-@include mat-core($custom-typography);
+@include mat.core($custom-typography);
 
 $custom-orange: (
     50: #004684,
@@ -59,20 +60,20 @@ $custom-orange: (
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$firestarter-primary: mat-palette($custom-orange, 50);
-$firestarter-accent: mat-palette($mat-orange, A700, A100, A400);
+$firestarter-primary: mat.define-palette($custom-orange, 50);
+$firestarter-accent: mat.define-palette(mat.$orange-palette, A700, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$firestarter-warn: mat-palette($mat-red);
+$firestarter-warn: mat.define-palette(mat.$red-palette);
 
 
 // Create the theme object (a Sass map containing all of the palettes).
-$firestarter-theme: mat-light-theme($firestarter-primary, $firestarter-accent, $firestarter-warn);
+$firestarter-theme: mat.define-light-theme($firestarter-primary, $firestarter-accent, $firestarter-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($firestarter-theme);
+@include mat.all-component-themes($firestarter-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
