--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~animate.css/animate.min';
@@ -10,7 +10,7 @@
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 @import url("https://use.typekit.net/jnq3uxd.css");
 // Plus imports for other components in your app.
 
