--- a/src/app/scheduler/scheduler.component.html
+++ b/src/app/scheduler/scheduler.component.html
@@ -211,8 +211,9 @@
 
                                         <mat-form-field appearance="outline">
                                             <mat-label>Notes</mat-label>
-                                            <textarea formControlName="note" matInput placeholder="write your note"
-                                                [rows]="3" [matTextareaAutosize]="true" required></textarea>
+                                            <!-- <textarea formControlName="note" matInput placeholder="write your note"
+                                                [rows]="3" [matTextareaAutosize]="true" required>
+                                            </textarea> -->
                                             <mat-error *ngIf="true">
                                                 A note is required!
                                             </mat-error>
