--- a/src/app/bmx/bmx.component.html
+++ b/src/app/bmx/bmx.component.html
@@ -35,7 +35,7 @@
         </div>
 
         <button mat-icon-button class="help">
-            <mat-icon>help_center</mat-icon>
+            <!-- <mat-icon>help_center</mat-icon> -->
         </button>
         <!-- <div mat-button class="help">
             Help?
