--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,6 @@
 @use '@angular/material' as mat;
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
-@import '~animate.css/animate.min';
 
 
 // THIS --> https://material.io/design/color/#tools-for-picking-colors
@@ -17,12 +16,21 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-$custom-typography: mat.define-typography-config(
+$custom-typography: mat.define-legacy-typography-config(
     $font-family: 'sofia-pro'
 );
 
 
-@include mat.core($custom-typography);
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy($custom-typography);`
+@include mat.all-legacy-component-typographies($custom-typography);
+@include mat.legacy-core();
 
 $custom-orange: (
     50: #004684,
@@ -73,7 +81,7 @@ $firestarter-theme: mat.define-light-theme($firestarter-primary, $firestarter-ac
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($firestarter-theme);
+@include mat.all-legacy-component-themes($firestarter-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
@@ -85,7 +93,7 @@ a {
     color: white;
     text-decoration: none;
 }
-@import '~animate.css/animate.min';
+// @import '~animate.css/animate.min';
 
 
 html, body { height: 100%; }
