--- a/src/app/bmx/components/project-reports/templates/report-first-page/report-first-page.component.html
+++ b/src/app/bmx/components/project-reports/templates/report-first-page/report-first-page.component.html
@@ -21,7 +21,7 @@
             <p> 200 SE 1ST STREET – 12TH FL </p>
             <p> Miami, FL 33131 </p>
             <p> <span style="font-weight: bold;">P</span> 305 374 2500 </p>
-            <p> <span style="font-weight: bold;">E</span> info@brandinstitute.com</p>
+            <p> <span style="font-weight: bold;">E</span> info&#64;brandinstitute.com</p>
         </div>
         <div>
             <p>Contact Person – New York Office </p>
@@ -29,7 +29,7 @@
             <p>Brand Institute </p>
             <p><span style="font-weight: bold;">P</span> 212 557 2100 </p>
             <p><span style="font-weight: bold;">E</span> <span
-                    style="color: #ee7f25;">wjohnson@brandinstitute.com</span> </p>
+                    style="color: #ee7f25;">wjohnson&#64;brandinstitute.com</span> </p>
         </div>
     </div>
 
@@ -71,7 +71,7 @@
             <p>{{'ADDRESS INFORMATION'}}</p>
             <p><span style="font-weight: bold;">P</span> <span style="color: #ee7f25;"> 555-555-5555 </span>
                 <span style="font-weight: bold;">E</span>
-                FirstLastname@companyname.com
+                FirstLastname&#64;companyname.com
             </p>
         </div>
         <div style="text-align: center;">
