--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,7 +12,7 @@ height: 100vh;">
 
                     <img class="logo" src="assets/img/bi-logo-with-tagline.svg">
 
-                    <div class="mat-subheading-1 secondary-text">Welcome to NameVote </div>
+                    <div class="mat-body-1 secondary-text">Welcome to NameVote </div>
 
                     <form name="loginForm" [formGroup]="loginForm" novalidate class="open-close-container">
                    
