--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -200,7 +200,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
         </svg></div>
 
     <!-- Cards Test Name-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
       <mat-card-header>
         <mat-card-title>Columns</mat-card-title>
       </mat-card-header>
@@ -224,7 +224,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
     </mat-card>
     <br>
 
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Select Ranking & Criteria</mat-card-title>
         </mat-card-header>
@@ -296,7 +296,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
     <br>
 
 <!-- Cards Criteria-->
-<mat-card class="example-card">
+<mat-card appearance="outlined" class="example-card">
   <mat-card-header>
       <mat-card-title>Category</mat-card-title>
   </mat-card-header>
