--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -193,7 +193,7 @@
         </svg></div>
 
     <!-- Cards Select Ranking-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Select Ranking
 
@@ -234,7 +234,7 @@
 
     <br>
     <!-- Cards Test Name-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Columns</mat-card-title>
         </mat-card-header>
@@ -260,7 +260,7 @@
 
     <br>
 
-    <mat-card class="example-card" *ngIf="showBar">
+    <mat-card appearance="outlined" class="example-card" *ngIf="showBar">
         <mat-card-header>
             <mat-card-title>Select Ranking
 
@@ -301,7 +301,7 @@
 
     <br>
     <!-- Cards Criteria-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Category</mat-card-title>
         </mat-card-header>
