--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -173,7 +173,7 @@
 
   <div style="display: flex; flex-direction: row;flex-wrap: wrap;justify-content: space-between;margin: 10px 39px;">
     <div *ngFor="let director of DIRECTORS; let i = index; trackBy: trackByIndex">
-      <mat-card class="directorCard" style="margin:20px 0px;width: 400px;">
+      <mat-card appearance="outlined" class="directorCard" style="margin:20px 0px;width: 400px;">
 
         <div style="display: flex;flex-direction: row;">
           <div style="margin-right: 6px; color: #324395;" class="selectLabels">Name: </div>
