--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -293,13 +293,13 @@
 
                 <!-- COMMENT AND NEW NAMES TEXTAREAS -->
                 <div class="textareas">
-                    <mat-form-field fxFlex="50" id="newNameFormField" appearance=""
+                    <mat-form-field fxFlex="50" id="newNameFormField" appearance
                         style="max-width: 45%; padding: 15px 20px;">
                         <input #txtNewName matInput placeholder="" [(ngModel)]="newNames"
                             style="font-size: 30px;text-align: center;">
                     </mat-form-field>
                     <mat-label class="newNamesLabel" style="color: darkblue;">new names</mat-label>
-                    <mat-form-field fxFlex="50" id="commentsFormField" appearance=""
+                    <mat-form-field fxFlex="50" id="commentsFormField" appearance
                         style="max-width: 45%; padding: 15px 20px;">
                         <input #txtComments matInput placeholder="" [(ngModel)]="newComments"
                             style="font-size: 30px;text-align: center;">
