--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -758,7 +758,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     }
 }
 
-::ng-deep .mat-tooltip {
+::ng-deep .mat-mdc-tooltip {
     font-size: 24px;
     position: absolute;
     left: -2px;
