--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -50,7 +50,7 @@
                     mat-form-field {
                         width: 100%;
                     }
-
+                    /* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version.*/
                     mat-checkbox {
                         margin: 0;
                     }
