--- a/src/app/bmx/bmx-creator/project-list/project-list.component.html
+++ b/src/app/bmx/bmx-creator/project-list/project-list.component.html
@@ -79,7 +79,7 @@
         <div style="width: 25%;position: relative;
         left: 40px;">
             <div style="width: 100%;">
-                <mat-card class="demo-inline-calendar-card">
+                <mat-card appearance="outlined" class="demo-inline-calendar-card">
                     <mat-calendar (selectedChange)="selected = $event"></mat-calendar>
                 </mat-card>
             </div>
