--- a/src/app/bmx/bmx-survey/bmx.component.html
+++ b/src/app/bmx/bmx-survey/bmx.component.html
@@ -55,7 +55,7 @@
 
 </div>
 <div class="loginContainerPresent" *ngIf="slideToLogin" (swipe)="onSwipe($event)" [@fadeInOut]>
-    <mat-card >
+    <mat-card appearance="outlined" >
         <mat-card-title><h1>Enter Login</h1></mat-card-title>
         <form class="example-form">
             <mat-form-field class="example-full-width">
