--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank/image-rank.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank/image-rank.component.html
@@ -188,7 +188,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
         </svg></div>
 
     <!-- Cards Test Name-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Columns</mat-card-title>
         </mat-card-header>
@@ -212,7 +212,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
     </mat-card>
     <br>
 <!-- Cards Criteria-->
-<mat-card class="example-card">
+<mat-card appearance="outlined" class="example-card">
   <mat-card-header>
       <mat-card-title>Category</mat-card-title>
   </mat-card-header>
@@ -265,7 +265,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 </mat-card>
 <br>
     <!-- Cards Select Ranking-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Select Ranking & Criteria</mat-card-title>
         </mat-card-header>
