--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -194,7 +194,7 @@
     <path d="M0 0h24v24H0z" fill="none"></path>
   </svg></div>
      <!-- Cards Criteria-->
-     <mat-card class="example-card">
+     <mat-card appearance="outlined" class="example-card">
       <mat-card-header>
         <mat-card-title>Category</mat-card-title>
       </mat-card-header>
@@ -242,7 +242,7 @@
     </mat-card>
 <br>
     <!-- Cards Test Name-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
       <mat-card-header>
         <mat-card-title>Columns</mat-card-title>
       </mat-card-header>
@@ -267,7 +267,7 @@
 <br>
 
    <!-- Cards Select Ranking-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
       <mat-card-header>
         <mat-card-title>Select Ranking & Criteria</mat-card-title>
       </mat-card-header>
@@ -446,7 +446,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
         </svg></div>
 
     <!-- Cards Test Name-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
       <mat-card-header>
         <mat-card-title>Columns</mat-card-title>
       </mat-card-header>
@@ -469,7 +469,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
     </mat-card>
     <br>
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Select Ranking & Criteria</mat-card-title>
         </mat-card-header>
@@ -541,7 +541,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
     </mat-card>
     <br>
 <!-- Cards Criteria-->
-<mat-card class="example-card">
+<mat-card appearance="outlined" class="example-card">
   <mat-card-header>
       <mat-card-title>Category</mat-card-title>
   </mat-card-header>
