--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -172,7 +172,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
         </svg></div>
 
     <!-- Cards Test Name-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Columns</mat-card-title>
         </mat-card-header>
@@ -198,7 +198,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 <!-- Cards Criteria-->
 
     <!-- Cards Select Ranking-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Select Ranking & Criteria</mat-card-title>
         </mat-card-header>
@@ -269,7 +269,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
     <br>
 
-<mat-card class="example-card">
+<mat-card appearance="outlined" class="example-card">
   <mat-card-header>
       <mat-card-title>Category</mat-card-title>
   </mat-card-header>
