--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -79,7 +79,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
         </svg></div>
 
     <!-- Cards Test Name-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Columns</mat-card-title>
         </mat-card-header>
@@ -102,7 +102,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
     </mat-card>
     <br>
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Select Ranking</mat-card-title>
         </mat-card-header>
@@ -142,7 +142,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
     </mat-card>
     <br>
     <!-- Cards Criteria-->
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
         <mat-card-header>
             <mat-card-title>Category</mat-card-title>
         </mat-card-header>
