--- a/src/app/bmx/components/project-list/project-list.component.html
+++ b/src/app/bmx/components/project-list/project-list.component.html
@@ -100,7 +100,7 @@
     <div style="width: 25%;position: relative;
         left: 40px;">
         <div style="width: 100%;">
-            <mat-card class="demo-inline-calendar-card">
+            <mat-card appearance="outlined" class="demo-inline-calendar-card">
                 <mat-calendar  [selected]="selectedDate" (selectedChange)="onSelect($event)"></mat-calendar>
                 <button mat-button (click)="onDeselect()">Reset date</button>
 
