--- a/src/app/bmx/components/project-reports/project-reports.component.html
+++ b/src/app/bmx/components/project-reports/project-reports.component.html
@@ -1,7 +1,7 @@
 <app-project-list-check *ngIf="showListDialog" (modal)="showDialog()" (projectsToCombineReports)="getReports($event)" [projectName]="projectId"></app-project-list-check>
   
 <div *ngIf="true" class="feature-modal-box">
-  <mat-card class="flex-column ">
+  <mat-card appearance="outlined" class="flex-column ">
     <mat-icon style="font-size: 35px;color: #032c72; animation: fadeIn 0.6s ease-in-out 0.3s backwards;">
       summarize
     </mat-icon>
