--- a/src/app/bmx/components/templates/templates.component.scss
+++ b/src/app/bmx/components/templates/templates.component.scss
@@ -71,6 +71,7 @@
   width: 40%;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version. */
 ::ng-deep .mat-select-value .edit-icon{
   display: none !important;
 }
