--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -91,8 +91,8 @@
 
             <div *ngIf="isUserLogged" fxLayout="column" fxLayoutAlign="center center" id="login">
                 <br>
-                <div class="mat-subheading-1">Name Suggestions: {{newNames.length}}</div>
-                <mat-card class="names-list-card">
+                <div class="mat-body-1">Name Suggestions: {{newNames.length}}</div>
+                <mat-card appearance="outlined" class="names-list-card">
                     <div *ngFor="let item of  newNames; let i = index" class="name-box"
                         (click)="openDialog(item.name, item.nameid, item.rationale, item.favourite, item.source)">
                         <div> {{item.name}}</div>
