--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -389,7 +389,7 @@
                     mat-form-field {
                         width: 100%;
                     }
-
+                    /* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version.*/
                     mat-checkbox {
                         margin: 0;
                     }
