--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <!-- <app-menu></app-menu>
-    <router-outlet></router-outlet>  -->
+    <app-menu></app-menu>
+    <router-outlet></router-outlet> 
 
 
 </div>
