--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -425,7 +425,7 @@ bottom: -2; ">
 
                     <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ RADIO ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
                     <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y);"
-                        *ngIf="this.bmxItem.componentText[y].RATE > 0 && this.bmxItem.componentSettings[0].rankType == 'radio'" mat-button style="background-color:#ee7f25 ;color: white;
+                        *ngIf="this.bmxItem.componentText[y].RATE > 0 && (this.bmxItem.componentSettings[0].rankType == 'radio'|| this.bmxItem.componentSettings[0].rankType == 'dinamycRadio')" mat-button style="background-color:#ee7f25 ;color: white;
                         animation: rubberBand 700ms ease-in forwards;">{{this.bmxItem.componentText[y].RATE}}
                     </button>
 
@@ -587,7 +587,7 @@ bottom: -2; ">
 
                     <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ RADIO ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
                     <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y);"
-                        *ngIf="this.bmxItem.componentText[y].RATE > 0 && this.bmxItem.componentSettings[0].rankType == 'radio'"
+                        *ngIf="this.bmxItem.componentText[y].RATE > 0 && (this.bmxItem.componentSettings[0].rankType == 'radio'|| this.bmxItem.componentSettings[0].rankType == 'dinamycRadio')"
                         mat-button style="background-color:#ee7f25 ;color: white;
                     animation: rubberBand 700ms ease-in  forwards;">{{this.bmxItem.componentText[y].RATE}}</button>
 
@@ -657,7 +657,7 @@ bottom: -2; ">
                 <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
                 <div>
                     <!-- IF ELSE TEMPLATE INPUTS  -- BELOW RADION BUTTONS COLUMN -->
-                    <input type="radio" *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true && this.rankingType == 'radio'"
+                    <input type="radio" *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true && (this.rankingType == 'radio')"
                         [name]="columnName + i" [checked]="testName[columnName]"
                         (click)="saveRadioColumValue(columnName, y)">
                     <!-- IF ELSE TEMPLATE INPUTS  -- BELOW RADION BUTTONS COLUMN -->
@@ -755,7 +755,7 @@ class="mobile">
 
         <div class="test-name-table" *ngIf="(y != 0)"
             [style.touch-action]="(this.bmxItem.componentSettings[0].rankType == 'dragAndDrop')?'none':''"
-            [style.height]="(selectedCard == y && this.bmxItem.componentSettings[0].rankType == 'radio')?'200px':(selectedCard == y)?'':'45px'">
+            [style.height]="(selectedCard == y && (this.bmxItem.componentSettings[0].rankType == 'radio'|| this.bmxItem.componentSettings[0].rankType == 'dinamycRadio'))?'200px':(selectedCard == y)?'':'45px'">
 
             <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'&& y != 0  " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
                 height: 30px;
@@ -875,7 +875,7 @@ class="mobile">
 
         <div class="test-name-table" *ngIf="(y != 0)"
             [style.touch-action]="(this.bmxItem.componentSettings[0].rankType == 'dragAndDrop')?'none':''"
-            [style.height]="(selectedCard == y && this.bmxItem.componentSettings[0].rankType == 'radio')?'200px':(selectedCard == y)?'':'45px'">
+            [style.height]="(selectedCard == y && (this.bmxItem.componentSettings[0].rankType == 'radio'|| this.bmxItem.componentSettings[0].rankType == 'dinamycRadio'))?'200px':(selectedCard == y)?'':'45px'">
 
             <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'&& y != 0  " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
             height: 30px;
